--- a/src/projects.json
+++ b/src/projects.json
@@ -1,19 +1,19 @@
 [{
     "id": 1,
     "name": "ShoppingMate App",
-    "description": "A browser-based shopping list app, which can be used to split the list. Shopping mates can select shopping aisle categories and tick off items at the same time.<br /><br /><i>PLEASE NOTE: Opening the app for the first time might take longer due to it being a free deployment which goes to sleep when it 's not in use. The same applies for the integrated background API.</i>",
+    "description": "A browser-based shopping list app, which can be used to split the list. Shopping mates can select shopping aisle categories and tick off items at the same time.<br /><br /><i>PLEASE NOTE: Opening the app for the first time might take longer due to it currently being a free deployment which goes to sleep when it 's not in use. Sorry 'bout that!</i>",
     "technologies": ["React", "API", "REST", "MongoDB", "Mongoose", "JavaScript", "HTML/5", "CSS/3", "Postman", "Heroku"],
     "linkPage": "https://tanjanita-shopping-mate.herokuapp.com/",
     "linkCode": "https://github.com/tanjanita/shopping-mate",
-    "imageURL": "/images/project-image-shoppingMate2.gif"
+    "imageURL": "/images/project-image-shoppingMate-224x162.png"
   },
   {
     "id": 2,
     "name": "My Portfolio",
-    "description": "The page you are currently looking at: <br />A portfolio showcasing some of my projects, plus further information about me and a CTA to contact me.",
+    "description": "The page you are currently looking at: <br />A portfolio showcasing some of my projects, plus further information about my skills and motivation, and a CTA to contact me.",
     "technologies": ["React", "JavaScript", "HTML/5", "CSS/3", "SASS", "BEM", "Figma", "SVG (Creation/FontAwesome)"],
     "linkPage": "https://tanjanita.herokuapp.com/",
     "linkCode": "https://github.com/tanjanita/portfolio",
-    "imageURL": "/images/project-image-portfolio.png"
+    "imageURL": "/images/project-image-portfolio-224x162.png"
   }
 ]
