--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-app",
   "version": "0.1.0",
-  "homepage": "https://tanjanita.github.io",
+  "homepage": "https://tanjanita.github.io/portfolio",
   "private": true,
   "engines": {
     "node": "14.x",
