--- a/src/projects.json
+++ b/src/projects.json
@@ -10,9 +10,9 @@
   {
     "id": 2,
     "name": "This Portfolio",
-    "description": "The page you are currently looking at: <br />A portfolio showcasing some of my projects, plus further information about my skills and motivation, and a CTA to contact me.<br /><br /><a href='https://www.figma.com/file/Ic7eZFDKapZZtsskpJJibg/Portfolio-Design?node-id=103%3A1479'><u>View the design file in Figma</u></a>",
-    "technologies": ["React", "JavaScript", "HTML5", "CSS3", "SASS", "BEM", "Figma", "SVG (Creation/FontAwesome)"],
-    "linkPage": "https://tanjanita.herokuapp.com/",
+    "description": "The page you are looking at: <br />A portfolio showcasing some of my projects, plus further information about my skills and motivation, and a CTA to contact me.<br /><br /><a href='https://www.figma.com/file/Ic7eZFDKapZZtsskpJJibg/Portfolio-Design?node-id=103%3A1479' target='_blank'><u>View the design file in Figma</u></a>",
+    "technologies": ["React", "JavaScript", "JSON", "HTML5", "CSS3", "SASS", "BEM", "Figma", "SVG (Creation/FontAwesome)"],
+    "linkPage": "https://tanjanita.com/",
     "linkCode": "https://github.com/tanjanita/portfolio",
     "imageURL": "/images/project-image-portfolio-224x162.png"
   }
