Features/41 publish on GitHub (#42)
* #41 WIP: package.json adjustments

* #41 WIP: homepage adjustment

* #41 WIP: Path adjustments

* #41 WIP: Path adjustments

* #41 WIP: Branch adjustments

* #41 WIP: Branch adjustments

* #41 WIP: project paths and images, move scrollfade JavaScript

* #41 WIP: Update project cards

* #41 WIP: Add CNAME

* Closes #41 Correct spelling skill set

--- a/src/projects.json
+++ b/src/projects.json
@@ -1,7 +1,7 @@
 [{
     "id": 1,
     "name": "shoppingMate App",
-    "description": "A browser-based shopping list app, which can be used to split the list. Shopping mates can select shopping aisle categories and tick off items at the same time.<br /><br /><i>PLEASE NOTE: Opening the app for the first time might take longer due to it currently being a free deployment which goes to sleep when it 's not in use. Sorry 'bout that!</i>",
+    "description": "A browser-based shopping list app, which can be used to split the list. Shopping mates can select shopping aisle categories and tick off items at the same time.<br /><br />Built using Create-React-App on the client side, connecting to an API managing data in MongoDB using Express server and Mongoose.",
     "technologies": ["React", "API", "REST", "MongoDB", "Mongoose", "JavaScript", "HTML5", "CSS3", "Postman", "Heroku"],
     "linkPage": "https://tanjanita-shopping-mate.herokuapp.com/",
     "linkCode": "https://github.com/tanjanita/shopping-mate",
@@ -9,10 +9,10 @@
   },
   {
     "id": 2,
-    "name": "This Portfolio",
-    "description": "The page you are currently looking at: <br />A portfolio showcasing some of my projects, plus further information about my skills and motivation, and a CTA to contact me.<br /><br /><a href='https://www.figma.com/file/Ic7eZFDKapZZtsskpJJibg/Portfolio-Design?node-id=103%3A1479'><u>View the design file in Figma</u></a>",
-    "technologies": ["React", "JavaScript", "HTML5", "CSS3", "SASS", "BEM", "Figma", "SVG (Creation/FontAwesome)"],
-    "linkPage": "https://tanjanita.herokuapp.com/",
+    "name": "Web Developer Portfolio",
+    "description": "The page you are looking at: <br />A portfolio showcasing some of my projects, plus further information about my skills and motivation, and a CTA to contact me. <br /><br />Designed in Figma and built based on Create-React-App using multiple components and integrated JSON data. <a href='https://www.figma.com/file/Ic7eZFDKapZZtsskpJJibg/Portfolio-Design?node-id=103%3A1479' target='_blank'><u>View the design file in Figma</u></a>",
+    "technologies": ["React", "JavaScript", "JSON", "HTML5", "CSS3", "SASS", "BEM", "Figma", "SVG (Creation/FontAwesome)"],
+    "linkPage": "https://tanjanita.com/",
     "linkCode": "https://github.com/tanjanita/portfolio",
     "imageURL": "/images/project-image-portfolio-224x162.png"
   }
